testdata/baselines/reference/submodule/compiler/modulePreserve5.errors.txt
main.ts(1,19): error TS2307: Cannot find module './data.json' or its corresponding type declarations.
main.ts(2,28): error TS2307: Cannot find module './data.json' or its corresponding type declarations.


==== data.json (0 errors) ====
    {}
    
==== main.ts (2 errors) ====
    import data1 from "./data.json" with { type: "json" };
                      ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './data.json' or its corresponding type declarations.
    const data2 = await import("./data.json", { with: { type: "json" } });
                               ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './data.json' or its corresponding type declarations.
    